--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<title>绎奇官网</title>
 	<link rel="stylesheet" type="text/css" href="./css/base.css">
-	<link rel="stylesheet" type="text/css" href="./css/swiper2.css">
+	<link rel="stylesheet" type="text/css" href="./css/swiper.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<style type="text/css">
 		#l-map{height:100%;width:100%;}
@@ -167,10 +167,10 @@
 							</span>
 						</div>
 						<div class="ab-detail">
-							<p>
+							<p class="detail1">
 								我们整合了多方优势资源，建立了一支由从业十年以上的资深人士组成的核心创作执行团队
 							</p>
-							<p>
+							<p class="detail2">
 								致力于成为制作商务PPT演示与3D动画的设计公司，为客户提供创新与专业的设计方案，满足客户的需求，凭借丰富的实战经验与强大的表现力，打破固有的单一模式，提供一站式的高效服务，为客户呈现完美的演示效果
 							</p>
 						</div>
@@ -385,7 +385,22 @@
 						</div>
 					</div>
 				</div>
-				<div class="item item2">
+				<div class="item item2 show480">
+					<div class="layer forward" data-depth="0.30">
+						<div class="item-bottom">
+							<div class="l-box">
+								<div class="l-cell">
+									<div class="l-title">线下公开课程</div>
+									<div class="l-en">Offline Public Course</div>
+									<div class="l-time">2个</div>
+									<div class="l-time">全天课程</div>
+								</div>
+							</div>
+							<img class="lession-img" src="images/lession/lession_item_02.jpg">
+						</div>
+					</div>
+				</div>
+				<div class="item item2 hide480">
 					<div class="layer forward" data-depth="0.30">
 						<div class="item-top">
 							<img class="lession-img" src="images/lession/lession_item_02.jpg">
@@ -638,11 +653,7 @@
 		</div>
 	</div>
 	
-	<script src="js/jquery.min.js"></script>
 	<script src="js/core.min.js"></script>
-	<script src="js/fullPage/jquery.fullPage.min.js"></script>
-	<script src="js/parallax.js"></script>
-	<script src="js/script.js"></script>
 	<script src="./js/yiqi.js"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=XjYb8I0LmkLSxb47eyDSSCtsYUInYn19"></script>
 </body>
