--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 							<label class="contact-label">留言：</label>
 							<textarea class="contact-txt" rows="4"></textarea>
 						</div>
-						<div>
+						<div class="contact-submit">
 							<button class="submit-btn" type="submit">提交：</button>
 							<span class="mark">（我们将在1个工作日内回复，资料会保密）</span>
 						</div>
