--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
 	<title>绎奇官网</title>
-	<link rel="stylesheet" type="text/css" href="./css/base.css">
-	<link rel="stylesheet" type="text/css" href="./css/swiper.css">
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/base.css?v=201611170957">
+	<link rel="stylesheet" type="text/css" href="./css/swiper.css?v=201611170957">
+	<link rel="stylesheet" type="text/css" href="./css/style.css?v=201611170957">
 	<style type="text/css">
 		#l-map{height:100%;width:100%;}
 	</style>
@@ -654,8 +654,8 @@
 		</div>
 	</div>
 	
-	<script src="js/core.min.js"></script>
-	<script src="./js/yiqi.js"></script>
+	<script src="./js/core.min.js?v=201611170957"></script>
+	<script src="./js/yiqi.js?v=201611170957"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=XjYb8I0LmkLSxb47eyDSSCtsYUInYn19"></script>
 </body>
 </html>
