--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 					<img class="phone-icon" src="images/header/phone_icon.png" height="16" width="15">
 					<span>热线电话：025-86306489</span>
 				</div>
+				<img class="nav-btn" src="images/header/navBtn.png">
 			</div>
 			<div class="contents">
 				<div class="rd-parallax rd-parallax-swiper">
