--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="format-detection" content="telephone=no">
+	<meta content="telephone=no,email=no" name="format-detection">
+	<meta content="yes" name="apple-mobile-web-app-capable">
+	<meta content="yes" name="apple-touch-fullscreen">
+	<meta name="App-Config" content="fullscreen=yes,useHistoryState=yes,transition=yes">
 	<title>绎奇官网</title>
 	<link rel="stylesheet" type="text/css" href="./css/base.css?v=201611170957">
 	<link rel="stylesheet" type="text/css" href="./css/swiper.css?v=201611170957">
