--- a/example.html
+++ b/example.html
@@ -67,7 +67,7 @@
 		</div>
 		<div class="ex-main">
 			<div class="ex-main-box">
-				<div class="ex-tab">
+				<div class="ex-tab active">
 					<ul class="ex-nav-tabs clearfix">
 						<li class="cur"><a href="#">发布会/年会</a></li>
 						<li><a href="#">企业形象宣传</a></li>
@@ -75,8 +75,8 @@
 						<li><a href="#">其他</a></li>
 					</ul>
 					<div class="ex-tab-content">
-						<div class="ex-tab-pane clearfix">
-							<ul class="ex-tab-list clearfix">
+						<div class="ex-tab-pane clearfix active">
+							<ul class="ex-tab-list active clearfix">
 								<li>
 									<a href="#">
 										<div class="ex-list-img">
@@ -210,6 +210,30 @@
 									</a>
 								</li>
 							</ul>
+							<ul class="ex-tab-list clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
 							<div class="ex-pagination">
 								<span class="prev"> < </span>
 								<ul class="ex-page">
@@ -218,6 +242,143 @@
 								</ul>
 								<span class="next"> > </span>
 							</div>
+						</div>
+						<div class="ex-tab-pane clearfix">
+						</div>
+						<div class="ex-tab-pane clearfix">
+						</div>
+						<div class="ex-tab-pane clearfix">
+						</div>
+					</div>
+				</div>
+				<div class="ex-tab">
+					<ul class="ex-nav-tabs clearfix">
+						<li class="cur"><a href="#">发布会/年会</a></li>
+						<li><a href="#">企业形象宣传</a></li>
+						<li><a href="#">政府/企业汇报</a></li>
+						<li><a href="#">其他</a></li>
+					</ul>
+					<div class="ex-tab-content">
+						<div class="ex-tab-pane clearfix active">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
+						</div>
+						<div class="ex-tab-pane clearfix">
+						</div>
+						<div class="ex-tab-pane clearfix">
+						</div>
+						<div class="ex-tab-pane clearfix">
+						</div>
+					</div>
+				</div>
+				<div class="ex-tab">
+					<ul class="ex-nav-tabs clearfix">
+						<li class="cur"><a href="#">发布会/年会</a></li>
+						<li><a href="#">企业形象宣传</a></li>
+						<li><a href="#">政府/企业汇报</a></li>
+						<li><a href="#">其他</a></li>
+					</ul>
+					<div class="ex-tab-content">
+						<div class="ex-tab-pane clearfix active">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
+						</div>
+						<div class="ex-tab-pane clearfix">
+						</div>
+						<div class="ex-tab-pane clearfix">
+						</div>
+						<div class="ex-tab-pane clearfix">
 						</div>
 					</div>
 				</div>
@@ -270,4 +431,5 @@
 	</div>
 	<img class="go-top" src="images/footer/top.png">
 	<script src="./js/jquery.min.js?v=201611170957"></script>
+	<script src="./js/example.js?v=201611170957"></script>
 </body>
