--- a/example.html
+++ b/example.html
@@ -244,10 +244,70 @@
 							</div>
 						</div>
 						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
 						</div>
 						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
 						</div>
 						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_01.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -337,10 +397,70 @@
 							</div>
 						</div>
 						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
 						</div>
 						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
 						</div>
 						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_02.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -375,10 +495,70 @@
 							</div>
 						</div>
 						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
 						</div>
 						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
 						</div>
 						<div class="ex-tab-pane clearfix">
+							<ul class="ex-tab-list active clearfix">
+								<li>
+									<a href="#">
+										<div class="ex-list-img">
+											<img src="images/example_list/ppt/pane1_03.png" alt="斯堪尼亚海格媒体沟通会">
+										</div>
+										<div class="ex-list-ft">
+											<span class="topic">斯堪尼亚海格媒体沟通会</span>
+											<span class="describition">沟通会</span>
+										</div>
+									</a>
+								</li>
+							</ul>
+							<div class="ex-pagination">
+								<span class="prev"> < </span>
+								<ul class="ex-page">
+									<li class="active">1</li>
+								</ul>
+								<span class="next"> > </span>
+							</div>
 						</div>
 					</div>
 				</div>
