--- a/example_detail.html
+++ b/example_detail.html
@@ -108,39 +108,26 @@
 			</div>
 		</div>
 	</div>
+	<!-- 底部 -->
 	<div class="footer">
 		<div class="footer-main">
-			<div class="footer-top">
-				<div class="item1">
-					<div>
-						<span class="footer-title">&copy; 版权声明</span>
-						<img class="footer-logo" src="images/footer/footer_logo.png">
-					</div>
+			<div class="footer-top clearfix">
+				<div class="item item1">
+					<img class="footer-logo" src="images/footer/footer_logo.png">
+				</div>
+				<div class="item item2">
+					<span class="footer-title copy">版权声明</span>
 					<p class="copyright">
 						绎奇官方发布的商业案例和讲师发布的课程版权属于绎奇传媒、会员所发布的作品版权归原作者所有，任何转载等商业用途均需联系作者。如未经授权用作他处，作者将追究侵权者的法律责任。
 					</p>
 					<p>译奇网为O2O商业平台，若您有任何需要，均可直接与在线客服联系。</p>
 				</div>
-				<div class="item2">
-					<div class="qrcode mr">
-						<img src="images/footer/qcode1.jpg">
-						<p class="qrcode-txt">微信公众号</p>
-					</div>
-					<div class="qrcode">
-						<img src="images/footer/qcode1.jpg">
-						<p class="qrcode-txt">小陆老师公众号</p>
-					</div>
-				</div>
-				<div class="item3">
-					<span class="footer-title">
-						<img class="tel" src="images/footer/tel_icon.png">
-						联系我们
-					</span>
+				<div class="item item3">
+					<span class="footer-title contact">联系我们</span>
 					<div class="footer-contact">
-						<p>座机：（+86）025-86306489</p>
-						<p>手机： 18951614092</p>
-						<p>邮箱： 3348656075@qq.com</p>
-						<p>QQ号： 3348656075&nbsp;&nbsp;&nbsp;137652747</p>
+						<p class="address">南京市浦口区孵鹰大厦A2座a205</p>
+						<p class="tel">+86&nbsp;&nbsp;025-86306489&nbsp;&nbsp;&nbsp;&nbsp;18951614092</p>
+						<p class="mail">邮箱： 3348656075@qq.com</p>
 					</div>
 				</div>
 			</div>
