--- a/lession.html
+++ b/lession.html
@@ -13,6 +13,95 @@
 	<link rel="stylesheet" type="text/css" href="./css/lession.css?v=201611170957">
 </head>
 <body>
-	
+	<!-- 头部导航 -->
+	<div class="header">
+		<a href="index.html">
+			<img class="logo" src="images/header/logo.png" height="37" width="148">
+		</a>
+		<div class="container">
+			<ul class="nav clearfix">
+				<li class="first">
+					<a href='./index.html' data-target="">首页</a>
+				</li>
+				<li>
+					<a href='#' data-target="about">关于绎奇</a>
+				</li>
+				<li>
+					<a href='#' data-target="example">经典案例</a>
+				</li>
+				<li>
+					<a href='#' data-target="service">服务类目</a>
+				</li>
+				<li>
+					<a href='#' data-target="lession">培训课程</a>
+				</li>
+				<li>
+					<a href='#' data-target="">最新动态</a>
+				</li>
+				<li class="last">
+					<a href='#' data-target="contact">联系我们</a>
+					<ul class="second-nav">
+						<li>PPT定制</li>
+						<li>AE视频定制</li>
+						<li>Keynot定制</li>
+						<li>商业计划书</li>
+						<li>宣传片设计</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+		<div class="phone">
+			<img class="phone-icon" src="images/header/phone_icon.png" height="16" width="15">
+			<span>热线电话：025-86306489</span>
+		</div>
+		<img class="nav-btn" src="images/header/navBtn.png">
+	</div>
+	<!-- 主体部分 -->
+	<div class="lession">
+		<!-- 头部介绍 -->
+		<div class="le-header">
+			<img class="le-title" src="images/lession_detail/title.png">
+			<img class="le-subtitle" src="images/lession_detail/sub_title.png">
+			<a href="#">
+				<img src="images/lession_detail/title_btn.png">
+			</a>
+		</div>
+		<!-- 中部介绍 -->
+		<div class="le-intro">
+			<img class="le-intro-img" src="images/lession_detail/introduction.png">
+			<p>绎奇培训，融合丰富演示、设计经验，跟进时下最新教育理念，开设了PPT技能线上培训、企业内训、线下培训的公开培训课程</p>
+			<p>拥有一支理论知识渊博、实战经验丰富的强大师资团队，提供多样化的教学模式。目前，优质动画课程已登录网易云线上课程，携手知名企业，量身定制100多场内训课程，</p>
+			<p>开展了数十场内容丰富，专题明确的线下实训课程</p>
+		</div>
+		<div class="footer">
+			<div class="footer-main">
+				<div class="footer-top clearfix">
+					<div class="item item1">
+						<img class="footer-logo" src="images/footer/footer_logo.png">
+					</div>
+					<div class="item item2">
+						<span class="footer-title copy">版权声明</span>
+						<p class="copyright">
+							绎奇官方发布的商业案例和讲师发布的课程版权属于绎奇传媒、会员所发布的作品版权归原作者所有，任何转载等商业用途均需联系作者。如未经授权用作他处，作者将追究侵权者的法律责任。
+						</p>
+						<p>译奇网为O2O商业平台，若您有任何需要，均可直接与在线客服联系。</p>
+					</div>
+					<div class="item item3">
+						<span class="footer-title contact">联系我们</span>
+						<div class="footer-contact">
+							<p class="address">南京市浦口区孵鹰大厦A2座a205</p>
+							<p class="tel">+86&nbsp;&nbsp;025-86306489&nbsp;&nbsp;&nbsp;&nbsp;18951614092</p>
+							<p class="mail">邮箱： 3348656075@qq.com</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="footer-floor">
+				<div class="footer-bottom">
+					Copyright@2015译奇网&nbsp;&nbsp;&nbsp;苏ICP备10000000号
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
