--- a/example.html
+++ b/example.html
@@ -577,7 +577,7 @@
 					<p class="copyright">
 						绎奇官方发布的商业案例和讲师发布的课程版权属于绎奇传媒、会员所发布的作品版权归原作者所有，任何转载等商业用途均需联系作者。如未经授权用作他处，作者将追究侵权者的法律责任。
 					</p>
-					<p>译奇网为O2O商业平台，若您有任何需要，均可直接与在线客服联系。</p>
+					<p class="copyright2">译奇网为O2O商业平台，若您有任何需要，均可直接与在线客服联系。</p>
 				</div>
 				<div class="item item3">
 					<span class="footer-title contact">联系我们</span>
