--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 								致力于成为制作商务PPT演示与3D动画的设计公司，为客户提供创新与专业的设计方案，满足客户的需求，凭借丰富的实战经验与强大的表现力，打破固有的单一模式，提供一站式的高效服务，为客户呈现完美的演示效果
 							</p>
 						</div>
-						<button class="ab-btn" type="button">查看更多</button>
+						<!-- <button class="ab-btn" type="button">查看更多</button> -->
 					</div>
 					<div class="fl about-mv">
 						<div class="ab-box">
