--- a/example.html
+++ b/example.html
@@ -596,6 +596,6 @@
 		</div>
 	</div>
 	<img class="go-top" src="images/footer/top.png">
-	<script src="./js/jquery.min.js?v=201611170957"></script>
+	<script src="./js/plugin/jquery.min.js?v=201611170957"></script>
 	<script src="./js/example.js?v=201611170957"></script>
 </body>
