--- a/lession.html
+++ b/lession.html
@@ -60,10 +60,10 @@
 	<div class="lession">
 		<!-- 头部介绍 -->
 		<div class="le-header">
-			<img class="le-title" src="images/lession_detail/title.png">
-			<img class="le-subtitle" src="images/lession_detail/sub_title.png">
+			<img class="le-title" src="./images/lession_detail/title.png">
+			<img class="le-subtitle" src="./images/lession_detail/sub_title.png">
 			<a href="#">
-				<img src="images/lession_detail/title_btn.png">
+				<img src="./images/lession_detail/title_btn.png">
 			</a>
 		</div>
 		<!-- 中部介绍 -->
@@ -72,6 +72,34 @@
 			<p>绎奇培训，融合丰富演示、设计经验，跟进时下最新教育理念，开设了PPT技能线上培训、企业内训、线下培训的公开培训课程</p>
 			<p>拥有一支理论知识渊博、实战经验丰富的强大师资团队，提供多样化的教学模式。目前，优质动画课程已登录网易云线上课程，携手知名企业，量身定制100多场内训课程，</p>
 			<p>开展了数十场内容丰富，专题明确的线下实训课程</p>
+		</div>
+		<!-- 课程介绍 -->
+		<div class="le-lession">
+			<div class="le-nav">
+				<div class="le-logo">
+					<img src="./images/lession_detail/le_nav_logo.png">
+				</div>
+				<ul class="le-navlist">
+					<li>企业高级内训</li>
+					<li>精品课程</li>
+					<li>线下精英特训营</li>
+					<li>公益演讲</li>
+					<li>名师阵容</li>
+					<li>绎奇动态</li>
+				</ul>
+				<div class="le-share">
+					<span class="le-tel">025-82366489</span>
+					<div class="le-share-box">
+						<div class="le-share-item share"></div>
+						<div class="le-share-item im"></div>
+						<div class="le-share-item weibo"></div>
+						<div class="le-share-item wechart"></div>
+					</div>
+				</div>
+			</div>
+			<div class="le-content">
+
+			</div>
 		</div>
 	</div>
 	<!-- 底部 -->
@@ -104,5 +132,7 @@
 			</div>
 		</div>
 	</div>
+	<script src="./js/plugin/vue.js?v=201612142055"></script>
+	<script src="./js/lession.js?v=201612142055"></script>
 </body>
 </html>
