--- a/example_detail.html
+++ b/example_detail.html
@@ -139,6 +139,6 @@
 		</div>
 	</div>
 	<img class="go-top" src="images/footer/top.png">
-	<script src="./js/jquery.min.js?v=201611170957"></script>
+	<script src="./js/plugin/jquery.min.js?v=201611170957"></script>
 </body>
 </html>
