--- a/index.html
+++ b/index.html
@@ -647,8 +647,8 @@
 		</div>
 	</div>
 	
-	<script src="./js/jquery.min.js?v=201611170957"></script>
-	<script src="./js/core.min.js?v=201611170957"></script>
+	<script src="./js/plugin/jquery.min.js?v=201611170957"></script>
+	<script src="./js/plugin/core.min.js?v=201611170957"></script>
 	<script src="./js/yiqi.js?v=201611210957"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=XjYb8I0LmkLSxb47eyDSSCtsYUInYn19"></script>
 	<script>
