--- a/lession.html
+++ b/lession.html
@@ -249,11 +249,107 @@
 						</div>
 					</div>
 				</div>
-				<div class="content" v-show="active === 5">
-					
+				<div class="teacher content" v-show="active === 5">
+					<div class="teacher-box title-box">
+						<div class="caption">
+							<span class="line"></span>
+							<h2 class="title">TEAM</h2>
+							<span class="line"></span>
+						</div>
+						<span class="sub-title">OUR KEY EMPLOYEES</span>
+						<ul class="teacher-list clearfix">
+							<li>
+								<div class="face face1"></div>
+								<div class="call">
+									<span class="name">陆长淼</span>
+									&nbsp;
+									<span class="honor">金牌讲师</span>
+								</div>
+								<span class="split"></span>
+								<p class="intro">绎奇传媒设计总监</p>
+								<p class="intro">精通版式设计、配色设计、动画制作等，累计PPT设计达2000多页，积累了大量的行业经验</p>
+							</li>
+							<li>
+								<div class="face face2"></div>
+								<div class="call">
+									<span class="name">胡必洋</span>
+									&nbsp;
+									<span class="honor">资深讲师</span>
+								</div>
+								<span class="split"></span>
+								<p class="intro">绎奇传媒设计总监</p>
+								<p class="intro">精通版式设计、配色设计、动画制作等，累计PPT设计达2000多页，积累了大量的行业经验</p>
+							</li>
+							<li>
+								<div class="face face3"></div>
+								<div class="call">
+									<span class="name">彭祥和</span>
+									&nbsp;
+									<span class="honor">资深讲师</span>
+								</div>
+								<span class="split"></span>
+								<p class="intro">绎奇传媒设计总监</p>
+								<p class="intro">精通版式设计、配色设计、动画制作等，累计PPT设计达2000多页，积累了大量的行业经验</p>
+							</li>
+						</ul>
+					</div>
 				</div>
-				<div class="content" v-show="active === 6">
-					
+				<div class="content news" v-show="active === 6">
+					<div class="news-box title-box">
+						<div class="caption">
+							<span class="line"></span>
+							<h2 class="title">NEWS</h2>
+							<span class="line"></span>
+						</div>
+						<span class="sub-title">STAY INFORMED</span>
+						<ul class="news-list">
+							<li>
+								<a href="#">
+									<img src="./images/lession_detail/content6/news_01.jpg">
+									<div class="contents">
+										<h3>中国平安保险</h3>
+										<p class="txt">成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了</p>
+									</div>
+									<div class="time">
+										08/19/2016
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="./images/lession_detail/content6/news_02.jpg">
+									<div class="contents">
+										<h3>太平鸟</h3>
+										<p class="txt">成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了</p>
+									</div>
+									<div class="time">
+										08/19/2016
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="./images/lession_detail/content6/news_03.jpg">
+									<div class="contents">
+										<h3>中国平安保险</h3>
+										<p class="txt">成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了成千上万的人梦想拥有自己的企业,成为一个成功的企业家更是如此。但是怎样才能实现成功商业行业的?最成功的企业家之一了</p>
+									</div>
+									<div class="time">
+										08/19/2016
+									</div>
+								</a>
+							</li>
+						</ul>
+						<div class="pagination">
+							<span class="prev"> < </span>
+							<ul class="page">
+								<li class="active">1</li>
+								<li>2</li>
+								<li>3</li>
+							</ul>
+							<span class="next"> > </span>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
