--- a/lession.html
+++ b/lession.html
@@ -86,10 +86,43 @@
 				<div class="le-share">
 					<span class="le-tel">025-82366489</span>
 					<div class="le-share-box">
-						<div class="le-share-item share"></div>
-						<div class="le-share-item im"></div>
-						<div class="le-share-item weibo"></div>
-						<div class="le-share-item wechart"></div>
+						<div class="le-share-item share">
+							<div class="share-box box" data-width="80px">
+								<div class="share-border"></div>
+								<a><img class="wechat" src="./images/lession_detail/nav/share_wechat.png" ></a>
+								<a><img class="weibo" src="./images/lession_detail/nav/share_weibo.png" ></a>
+								<span class="triangle"></span>
+							</div>
+						</div>
+						<div class="le-share-item im">
+							<div class="share-box box" data-width="105px">
+								<div class="share-border"></div>
+								<a class="qme">有事您请Q我</a>
+								<span class="triangle"></span>
+							</div>
+						</div>
+						<div class="le-share-item weibo">
+							<div class="share-box box" data-width="105px">
+								<div class="share-border"></div>
+								<span class="share-focus">
+									<a><img src="./images/lession_detail/nav/share_focus.png" ></a>
+									<a class="">加关注</a>
+								</span>
+								<span class="triangle"></span>
+							</div>
+						</div>
+						<div class="le-share-item wechart">
+							<div class="share-big-box box" data-width="200px">
+								<div class="qrcode">
+									<img src="./images/lession_detail/nav/share_qrcode1.jpg">
+									<p>绎奇公众号</p>
+								</div>
+								<div class="qrcode">
+									<img src="./images/lession_detail/nav/share_qrcode2.jpg">
+									<p>小陆老师公众号</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
