--- a/lession.html
+++ b/lession.html
@@ -206,7 +206,14 @@
 				<div class="course content" v-show="active === 2">
 					<div class="course-box clearfix">
 						<div class="course-top course1 mr2">
-							<img class="computer" src="./images/lession_detail/content2/content2_computer.png">
+							<div class="computer">
+								<div class="course-scroll">
+									<ul class="scroll">
+										<li><img src="./images/lession_detail/content2/content2_scroll_1.jpg"></li>
+										<li><img src="./images/lession_detail/content2/content2_scroll_2.jpg"></li>
+									</ul>
+								</div>
+							</div>
 							<div class="intro">
 								<p class="title">360°解析PPT制作·动画篇（专业版）</p>
 								<div class="txt-box">
