--- a/example_detail.html
+++ b/example_detail.html
@@ -103,7 +103,7 @@
 					<li><img src="images/example_detail/result1.png"></li>
 					<li><img src="images/example_detail/result2.png"></li>
 					<li><img src="images/example_detail/result3.png"></li>
-					<li class="last"><img src="images/example_detail/result4.png"></li>
+					<li><img src="images/example_detail/result4.png"></li>
 				</ul>
 			</div>
 		</div>
