--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 			</div>
 		</div>
 	</div>
-	
+	<img class="go-top" src="images/footer/top.png">
 	<script src="./js/plugin/jquery.min.js?v=201611170957"></script>
 	<script src="./js/plugin/core.min.js?v=201611170957"></script>
 	<script src="./js/yiqi.js?v=201611210957"></script>
