--- a/example_detail.html
+++ b/example_detail.html
@@ -140,5 +140,12 @@
 	</div>
 	<img class="go-top" src="images/footer/top.png">
 	<script src="./js/plugin/jquery.min.js?v=201611170957"></script>
+	<script>
+	
+		// 回到顶部
+		$(".go-top").click(function() {
+			$("html, body").animate({ scrollTop: 0 }, 500);
+		});
+	</script>
 </body>
 </html>
