--- a/lession.html
+++ b/lession.html
@@ -132,7 +132,7 @@
 						<li class="clearfix unslide">
 							<div class="slide-wripe">
 								<div class="slide-left">
-									<img src="./images/lession_detail/content_slide_logo_1.png">
+									<img src="./images/lession_detail/content_slide_logo_1.png" height="74px">
 									<div class="slide-banner">
 										<h3 class="name">东风日产 & 绎奇</h3>
 										<span class="theme">确定战略合作关系</span>
